<resources>
    <string name="app_name" translatable="false">Kore</string>
    <string name="settings">Settings</string>
    <string name="action_options">Options</string>
    <string name="loading">Loading…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="xbmc_media_center">Media Center</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="music">Music</string>
    <string name="pictures">Pictures</string>
    <string name="dcim">DCIM</string>
    <string name="external_storage">Storage</string>
    <string name="addons">Addons</string>
    <string name="files">Kodi Files</string>
    <string name="local_files">Local Files</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
    <string name="media">Media</string>
    <string name="window">Window</string>
    <string name="script">Script</string>
    <string name="unknown">Unknown</string>
    <string name="file_browser">Kodi File Browser</string>
    <string name="local_file_browser">Local File Browser</string>
    <string name="pvr">PVR</string>
    <string name="favourites">Favourites</string>
    <string name="weather">Weather</string>
    <string name="system">System</string>
    <string name="no_xbmc_configured">No media center configured</string>
    <string name="add_xbmc">Add Media Center</string>
    <string name="xbmc_quit">Media center is closing.</string>
    <string name="wol_sent">Wake up call sent to your media center.</string>
    <string name="power">Power</string>
    <string name="quit">Quit</string>
    <string name="suspend">Suspend</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
    <string name="send">Send</string>
    <string name="send_text">Send text to media center</string>
    <string name="text_to_send">Text to send</string>
    <string name="finish_after_send">Finish after send</string>
    <string name="library_actions">Library maintenance</string>
    <string name="clean_video_library">Clean video library</string>
    <string name="clean_audio_library">Clean audio library</string>
    <string name="update_video_library">Update video library</string>
    <string name="update_audio_library">Update audio library</string>
    <string name="toggle_fullscreen">Toggle fullscreen</string>
    <string name="not_connected">Not connected</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="connecting">Connecting…</string>
    <string name="connecting_to">Couldn\'t connect to %1$s (%2$s)\nRetrying…</string>
    <string name="wizard_welcome">Welcome</string>
    <string name="wizard_welcome_message"><![CDATA[
	    Let\'s start by adding a media center.
	    <br/>
	    Make sure that Kodi is running and properly configured. Specifically check the following under Kodi\'s <b>Settings</b>:
	    <br/><br/>
	    Select <b>Services</b>, then <b>Control</b> and:
	    <br/>
        1. Enable <b>Allow remote control via HTTP</b>;
        <br/>
	    2. Enable both options <b>Allow remote control from applications on this system</b> and <b>Allow remote control from applications on other systems</b>;
	    <br/><br/>
	    Select <b>Services</b>, then <b>General</b> and:
	    <br>
	    1. Enable <b>Announce services to other systems</b>;
	    <br/><br/>
	    You can get additional help <a href="http://syncedsynapse.com/kore/kore-faq/">here</a>.
	    <br/><br/>
	    When you\'re ready press <b>Next</b>.
    ]]></string>
    <string name="wizard_search_message"><![CDATA[
    	Searching for media centers on your local network…<br/>
    ]]></string>
    <string name="wizard_search_no_host_found"><![CDATA[
	    I couldn\'t find any media center on your network.<br/><br/>
	    Please make sure that Kodi is running and properly configured, specifically check the following under Kodi\'s <b>Settings</b>:
	    <br/><br/>
	    Select <b>Services</b>, then <b>Control</b> and:
	    <br/>
        1. Enable <b>Allow remote control via HTTP</b>;
        <br/>
	    2. Enable both options <b>Allow remote control from applications on this system</b> and <b>Allow remote control from applications on other systems</b>;
	    <br/><br/>
	    Select <b>Services</b>, then <b>General</b> and:
	    <br>
	    1. Enable <b>Announce services to other systems</b>;
	    <br/><br/>
	    You can get additional help <a href="http://syncedsynapse.com/kore/kore-faq/">here</a>.
	    <br/><br/>
	    Click <b>Search again</b> or <b>Next</b> for manual configuration.
    ]]></string>
    <string name="wizard_search_no_network_connection"><![CDATA[
    	Please enable a network connection before searching for media centers.<br/>
    ]]></string>
    <string name="wizard_search_host_found"><![CDATA[
    	I found these media centers on your network.<br/><br/>
    	Select one to add or press <b>Next</b> to manually add a new one.
    ]]></string>
    <string name="no_network_connection">No network connection</string>
    <string name="searching">Searching…</string>
    <string name="no_xbmc_found">No media center found</string>
    <string name="xbmc_found">Media center found</string>
    <string name="wizard_manual_configuration">Manual configuration</string>
    <string name="wizard_manual_configuration_message">Enter your media center configuration:</string>
    <string name="wizard_manual_configuration_message_advanced">Advanced configuration (leave blank for defaults)</string>
    <string name="wizard_xbmc_name">Media center name</string>
    <string name="wizard_xbmc_ip">Address</string>
    <string name="wizard_xbmc_port">Port</string>
    <string name="wizard_xbmc_username">Username</string>
    <string name="wizard_xbmc_password">Password</string>
    <string name="wizard_xbmc_tcp_port">TCP port (9090)</string>
    <string name="wizard_xbmc_mac_address">MAC address</string>
    <string name="wizard_xbmc_wol_port">WoL port (9)</string>
    <string name="wizard_xbmc_use_tcp">Use TCP</string>
    <string name="wizard_xbmc_event_server_port">ES Port (9777)</string>
    <string name="wizard_xbmc_use_event_server">Use EventServer</string>
    <string name="wizard_xbmc_direct_share">Show in share sheet</string>
    <string name="wizard_no_name_specified">Please specify a name for this media center, so you can identify it later.</string>
    <string name="wizard_no_address_specified">Please specify the address of this media center, so I can locate it.</string>
    <string name="wizard_invalid_http_port_specified">Please specify a valid HTTP port for this media center.</string>
    <string name="wizard_invalid_tcp_port_specified">Please specify a valid TCP port for this media center.</string>
    <string name="wizard_invalid_es_port_specified">Please specify a valid EventServer port for this media center.</string>
    <string name="wizard_connecting_to_xbmc_title">Connecting to %1$s…</string>
    <string name="wizard_connecting_to_xbmc_message">Please wait while I try to connect to your media center…</string>
    <string name="wizard_empty_authentication">Kodi requires authentication.\n
    	Please specify a username and password.</string>
    <string name="wizard_incorrect_authentication">Wrong username and/or password.\n
    	Please check your credentials.</string>
    <string name="wizard_success_connecting">Connected to Kodi.</string>
    <string name="wizard_error_connecting">Couldn\'t connect to Kodi.\n
    	Please check the configuration.</string>
    <string name="wizard_done">All done!</string>
    <string name="wizard_done_message"><![CDATA[
	    Your media center is configured.<br/>
	    You can now use the remote to control it. Your library is being synced, and should be available in a few moments.<br/><br/>
	    Press <b>Finish</b> to start using the remote.
    ]]></string>
    <string name="wizard_zeroconf_no_host_address">Couldn\'t get this media center address!</string>
    <string name="wizard_zeroconf_cant_connect_no_host_address">Can\'t connect to this media center because i wasn\'t able to discover its address.</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="rewind">Rewind</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>
    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="volume_mute">Mute</string>
    <string name="subtitles">Subtitles</string>
    <string name="audiostreams">Audiostreams</string>
    <string name="no_audiostream">No audiostream available</string>
    <string name="download_subtitle">Download subtitles</string>
    <string name="none">None</string>
    <string name="audio_sync">Sync audio</string>
    <string name="subtitle_sync">Sync subtitles</string>
    <string name="party_mode">Party mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="select">Select</string>
    <string name="info">Info</string>
    <string name="codec_info">Codec</string>
    <string name="context">Context</string>
    <string name="osd">Menu</string>
    <string name="back">Back</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="test_connection">Test</string>
    <string name="search_again">Search again</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="wake_up">Wake up</string>
    <string name="edit_xbmc">Edit media center</string>
    <string name="remote">Remote</string>
    <string name="action_search">Search</string>
    <string name="hide_watched">Hide watched</string>
    <string name="sort_order">Sort</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_date_added">By date added</string>
    <string name="ignore_prefixes">Ignore prefixes</string>
    <string name="application">Application</string>
    <string name="theme">Theme</string>
    <string name="theme_color">Colour Scheme</string>
    <string name="theme_variant">Variant</string>
    <string name="switch_to_remote">Show on media start</string>
    <string name="keep_remote_above_lockscreen">Show over lockscreen</string>
    <string name="pref_keep_screen_on">Stay awake</string>
    <string name="show_now_playing_panel">Show now playing panel</string>
    <string name="show_now_playing_panel_summary">Display a panel at the bottom of the screen when media is playing</string>
    <string name="pause_during_calls">Pause during phone call</string>
    <string name="vibrate_on_remote">Vibrate on touch</string>
    <string name="always_sendtokodi_addon">Prefer SendToKodi addon</string>
    <string name="remote_bar_items">Bottom bar shortcuts</string>
    <string name="nav_drawer_items">Side menu shortcuts</string>
    <string name="download_network_types_title">Restrict media downloads</string>
    <string name="download_network_types_summary">Select network types over which media downloads are allowed</string>
    <string name="about">About</string>
    <string name="recordings">Recordings</string>
    <string name="tv_channels">TV Channels</string>
    <string name="radio_channels">Radio Channels</string>
    <string name="by_album">By album</string>
    <string name="by_artist">By artist</string>
    <string name="by_artist_and_year">By artist and year</string>
    <string name="language">Language</string>
    <string name="use_hardware_volume_keys">Use device volume keys</string>
    <string name="preferred_youtube_addon">Preferred YouTube addon</string>
</resources>